--- a/Bayesian_smoothing_JSS.tex
+++ b/Bayesian_smoothing_JSS.tex
@@ -1,4 +1,4 @@
-\documentclass[
+ Inc.\documentclass[
   shortnames]{jss}
 
 %% recommended packages
@@ -8,7 +8,7 @@
 
 \author{
 Gilberto Camara~\orcidlink{0000-0002-3681-487X}\\Nat Inst for Space Research\\
-Brazil \And Renato Assunção~\orcidlink{0000-0001-7442-9166}\\Federal Univ of Minas Gerais\\
+Brazil \And Renato Assunção~\orcidlink{0000-0001-7442-9166}\\ESRI Inc.\\
 Brazil \And Rolf Simoes~\orcidlink{0000-0003-0953-4132}\\Nat Inst for Space Research\\
 Brazil \AND Alexandre Carvalho~\orcidlink{0000-0001-8762-5465}\\Inst Applied Economic Research\\
 Brazil \And Felipe Souza~\orcidlink{0000-XXXXX}\\Nat Inst for Space Research\\
