new version of introduction

--- a/Bayesian_smoothing_JSS.Rmd
+++ b/Bayesian_smoothing_JSS.Rmd
@@ -94,31 +94,33 @@ tempdir = "./temp_dir"
 \newpage
 # Introduction
 
-Remote sensing images are crucial to environmental management. Its uses include measuring changes in land cover, agriculture, and natural habitats. Images identify and track wildfires, enabling timely response and effective response. Satellite measures are the only way to provide a systematic cover of large and distant areas; an example is detection of tropical deforestation, which is crucial in the fight against climate change. By providing vital information to policymakers and conservationists, remote sensing data helps protect the world’s environment. 
+Remote sensing images play a critical role in environmental management. Its applications range from measuring changes in land cover to assessing agriculture and natural habitats. Images play a crucial role in identifying and tracking wildfires, allowing for swift and efficient responses. Satellite measurements are the sole means to achieve comprehensive coverage of vast and far-off regions. By providing vital information to policymakers and conservationists, remote sensing data helps protect the world’s environment. 
 
-One of the most important tasks in remote sensing image processing is image classification, a task which  partitions the pixels in an image into different classes based on their spectral characteristics, spatial patterns, or other relevant features. Machine learning methods such as random forests \citep{Belgiu2016} and deep learning \citep{Ma2019} are commonly used for this job. These techniques typically rely on training samples that are derived from single and isolated pixels, hand-picked by users to represent the desired output classes. The result of machine learning classification is usually a set of matrices with the same size as the original image. Each matrix contains the likelihoods for that a pixel belongs to one of the classes. 
+Image classification is an essential component of remote sensing image analysis. The objective of this task is to classify the pixels in an image into distinct classes by analysing their spectral characteristics, spatial patterns, or other relevant features. Researchers employ machine learning methods like random forests \citep{Belgiu2016} and deep learning \citep{Ma2019} in image classification. These techniques depend on training samples that users choose, consisting of isolated pixels that represent the desired output classes. Machine learning classification yields matrices that are identical in size to the original image. Each matrix provides the probability of a pixel's class membership. The likelihood values for each element in the matrix are positive and range from 0 to 1. The total of all component values equals 1, representing a 100% probability.
 
-Post-processing techniques have become crucial to refine the labels of a classified image \citep{Huang2014}. There are a number of reasons why the post-processing is required. Classification algorithms may introduce noise or produce misclassifications due to the complexity of remote sensing data. At any resolution level, an image pixel only summarizeswhat is real. Pixels with mixed landscapes are common and this can misguide a classification technique. The pixel resolution is the size of the ground area that each pixel represents in the image. This ground area may not be homogeneously composed of a single class, especially  on transition zones between different landscapes. The features associated with a given pixel are an amalgamation or fusion of the diverse elements on these mixed pixels and they may be hard to classify. 
+Post-processing techniques have become crucial to refine the labels of a classified image \citep{Huang2014}. There are several reasons post-processing is required. Classification algorithms may introduce noise or produce misclassifications because of the complexity of remote sensing data. Each satellite image has a fixed resolution, which is the size of the ground area that each pixel represents in the image. At any resolution level, an image pixel only summarises the response of the ground targets from all objects inside its geometric coverage. Pixels with mixed landscapes are frequent, which can misguide a classification technique. The ground area in transition zones between different landscapes can have a mixture of classes rather than being composed of a single class. Therefore, pixels in transition zones between homogeneous cloud cover are hard to classify. 
 
-Another reason for post-processing is to refine the boundary between classes or to filter out outliers and misclassified pixels. The classification algorithms may produce noisy or fragmented class assignments, especially when dealing with high-resolution imagery. The features used to classify the pixels, such as their spectral characteristics, have large variability and different classes show great overlap.  The consequence is that the classifiers often produce results with outliers or misclassified pixels. By mitigating these errors and minimizing noise, post-processing improves the quality of the initial classification results, bringing  a significant gain in the overall accuracy and interpretability of the final output \citep{Schindler2012}.
+Another reason for post-processing is to refine the boundary between classes or to filter out outliers and misclassified pixels. Classification algorithms may produce noisy or fragmented class assignments. The features used to classify the pixels, such as their spectral characteristics, have large variability, and different classes show significant overlap. As a result, classifiers often produce results with outliers or misclassified pixels. By mitigating these errors and minimising noise, post-processing improves the quality of the initial classification results, bringing a significant gain in the overall accuracy and interpretability of the final output \citep{Schindler2012}.
 
-Both reasons for post-processing are clearly seen in Figure \@ref(fig:roim), which shows a fragment of a Sentinel-2 image from the Amazon in the state of Rondonia, Brazil. The image starkly contrasts forest areas (depicted in green) and deforested areas (portrayed in various shades of orange and brown). However, we see the border pixels between different land classes with with less stark colors representing their fuzzy class assignment. 
+The fragment of a Sentinel-2 image from the Amazon in Rondonia, Brazil, shown in Figure \@ref(fig:roim), illustrates both reasons for post-processing. The image contrasts forest areas (depicted in green) and deforested areas (portrayed in various shades of orange and brown). However, the border pixels between different land classes with less stark colours represent their fuzzy class assignment. 
 
 ```{r roim, echo = FALSE, fig.width = 5, fig.align="center", fig.cap= "Sentinel-2 image of deforestation in the Amazon forest (detail)."}
 
 knitr::include_graphics("images/rondonia_image.png")
 ```
 
-Overall, post-processing of machine learning output in remote sensing image classification is essential to enhance the accuracy, spatial coherence, and interpretability of the classification results, ensuring that the final maps provide reliable information for decision-making and subsequent analysis. Most post-processing methods use the smoothness assumption that nearby pixels tend to have the same label \citep{Schindler2012}. These include probability-based smoothing methods such as Gaussian, semi-global, bilateral and edge-aware filtering \citep{Schindler2012}, modal filters \citep{Ghimire2010}, and co-occurrence matrices \citep{Huang2014}. 
 
-<!-- EM QUE ESSES METODOS ANTERIORES DEIXAM A DESEJAR? E COMO O SEU METODO VAI TENTAR CORRIGIR ESSAS FALHAS?? -->
-<!-- RESPONDI -->
- 
-Despite their usefulness, these methods have shortcomings. Gaussian and semi-global smoothing assumes a single value of local variance per class for all neighborhoods. These methods also consider that pixel likelihoods change slowly within a neighborhood, and that the correlation depends only on how far two pixels are from each other \citep{Schindler2012}. Bilateral smoothing is an \textit{ad-hoc} method that introduces a global parameter that tries to preserve the shape of boundaries which are lost by Gaussian filters. The co-occurrence matrices proposed by \citet{Huang2014} work on categorical images and do not consider the likelihood values for each pixel. Also, these methods assume the spatial distribution of the class likelihoods is isotropic. When using the likelihood of a pixel and its neighbors to compute properties such as mean, variance and spatial autocorrelation, all spatial directions are considered equivalent. As we will argue in this paper, such assumption does not hold in general in the case of border pixels.
- 
-In this paper, we introduced a new type of post-processing algorithm founded on an Empirical Bayes approach and catered to the specific properties of land classification. The algorithm has been implemented in an R package, \pkg{bayesEO}. We employ non-isotropic neighbourhood definitions to mimic the effects of discontinuity between land classes, enabling our method to better capture the spatial complexities inherent in such data. Our method allows the inclusion of expert knowledge, removes outliers, and enhances the consistency of the resulting map.  The \pkg{bayesEO} package can be used jointly with \pkg{sits}, an end-to-end toolkit for land use and land cover classification using big Earth observation data developed by the authors \citep{Simoes2021}.
 
-Our package adds to the other \proglang{R} libraries focused on the spatial data analysis, including \pkg{spdep} \citep{Bivand2023} and \pkg{rgeoda} \citep{Li2022}. \pkg{CARBayes} \citep{Lee2013}  implements Bayesian models for spatial areal units. For image processing analysis,  \pkg{terra} \citep{Hijmans2023} provides supervised classification with decision trees, while \pkg{stars} \citep{Bivand2023} include functions for linear regression and random forest classification. For post-processing of machine learning image classification, \pkg{sits} also uses the method described in this paper.  As far as we are aware, there is no current \proglang{R} package that supports post-processing of image classification of remote sensing images. Therefore, the \pkg{bayesEO} is a useful addition to the facilities available in \proglang{R} for remote sensing image processing. 
+Post-processing is crucial in remote sensing image classification to improve results’ accuracy, spatial coherence, and interpretability, ensuring reliable information for decision-making and analysis. Most post-processing methods use the smoothness assumption that nearby pixels have the same label \citep{Schindler2012}. These include probability-based smoothing methods such as Gaussian, semi-global, bilateral and edge-aware filtering \citep{Schindler2012}, modal filters \citep{Ghimire2010}, and co-occurrence matrices \citep{Huang2014}. 
+
+Despite their usefulness, these methods have shortcomings. Gaussian and semi-global smoothing presume a uniform local variance value for each class across all neighbourhoods. These approaches assume probabilities change gradually within a window centred on each pixel. Gaussian and semi-global methods dissolve crisp boundaries that separate homogenous regions in the image. The trade-off of removing outliers is the blurring of edges. Gaussian and semi-global smoothing techniques are often ineffective in addressing the problem of mixed pixels at object boundaries \citep{Huang2014}. Bilateral smoothing uses two global parameters to maintain boundary shapes eliminated by Gaussian filters (Schindler, 2012). However, bilateral filtering uses global ad hoc parameters that do not consider the specifics of different local arrangements. These methods assume the spatial distribution of the class likelihoods is isotropic when using the likelihood values of a pixel and its neighbours to compute properties such as mean, variance and spatial autocorrelation. As we argue in this paper, such an assumption does not hold for border pixels. Thus, we need post-processing methods adaptable to cases such as mixed pixels and anisotropic neighbourhoods.
+
+ 
+
+This paper presents a novel post-processing algorithm for remote sensing image classification based on an Empirical Bayes strategy. The algorithm is available in the R package \pkg{bayesEO}. We employ non-isotropic neighbourhood definitions to mimic the effects of discontinuity between land classes. Thus, our method captures the spatial complexities inherent in such data compared to previous proposals. Our method allows including expert knowledge, removes outliers, and enhances the consistency of the resulting map. The \pkg{bayesEO} package can be combined with \pkg{sits}, an end-to-end toolkit for land use and land cover classification using big Earth observation data developed by the authors \citep{Simoes2021}.
+
+Our package adds to other \proglang{R} libraries focused on the spatial data analysis, including \pkg{spdep} \citep{Bivand2023} and \pkg{rgeoda} \citep{Li2022}. \pkg{CARBayes} \citep{Lee2013}  implements Bayesian models for spatial areal units. For image processing analysis,  \pkg{terra} \citep{Hijmans2023} provides supervised classification with decision trees, while \pkg{stars} \citep{Bivand2023} includes functions for linear regression and random forest classification. For post-processing of machine learning image classification, \pkg{sits} also uses the method described in this paper. As far as we are aware, there is no current \proglang{R} package that supports post-processing of image classification of remote sensing images. Therefore, the \pkg{bayesEO} is a useful addition to the facilities available in \proglang{R} for remote sensing image processing. 
+
 
 
 # Methods
